tooling/k8s/networking/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-app.k8s.sgweb.space
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nodejs-frontend-service-nodeport
                port:
                  number: 80
            path: /
    - host: nodejs-app-product-backend.k8s.sgweb.space
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nodejs-product-service-nodeport
                port:
                  number: 3001
            path: /
    - host: nodejs-app-user-backend.k8s.sgweb.space
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nodejs-user-service-nodeport
                port:
                  number: 3000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - nodejs-app.k8s.sgweb.space
        - nodejs-app-product-backend.k8s.sgweb.space
        - nodejs-app-user-backend.k8s.sgweb.space
      secretName: letsencrypt-prod
